Implement AtlasMapperIndexerTest
- Refactor AtlasMapperIndexer to make it testable.
- Refactor IndexerTest to make a IndexerTestBase that can be reuse with other Indexer test classes.
- Add an "atlasmapper" index to the search engine test config.
-